fix: enhance tz handle
