# apps/api/src/dto/owner/update-owner.dto.ts
@@ -54,6 +54,10 @@ export class UpdateOwnerDto {
   @IsOptional()
   bookingMonthsAhead?: number;
 
+  @IsString()
+  @IsOptional()
+  timezone?: string;
+
   @ValidateNested()
   @Type(() => WorkingHoursUpdateDto)
   @IsOptional()
