# apps/api/src/dto/slot/get-available-slots.dto.ts
@@ -3,5 +3,9 @@ import { IsISO8601, IsNotEmpty } from 'class-validator';
 export class GetAvailableSlotsDto {
   @IsISO8601()
   @IsNotEmpty()
-  forDate!: string;
+  dateFrom!: string;
+
+  @IsISO8601()
+  @IsNotEmpty()
+  dateTo!: string;
 }
